Editing: text blocks

--- a/site/guide/templates/_customize-document-templates.qmd
+++ b/site/guide/templates/_customize-document-templates.qmd
@@ -3,7 +3,7 @@
 
 1. Under Documents, select **Templates**.
 
-1. Select one of the tabs for the type of template you want to edit: 
+1. Select one of the tabs for the type of template you want to edit.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)] For example:
 
    - **Documentation** 
    - **Validation Report**
@@ -50,11 +50,7 @@ Customize {{< var vm.product >}}'s templates for model documentation, validation
 
 1. Under Documents, select **Templates**.
 
-1. Select one of the tabs for the type of template you want to edit: 
-
-   - **Documentation** 
-   - **Validation Report**
-   - **Ongoing Monitoring**
+1. Select one of the tabs for the [type of template you want to edit](/guide/templates/working-with-model-documents.qmd).
 
 1. Click the template to edit and on the template details page, select **{{< fa pencil >}} Edit Outline**. 
 
