--- a/site/guide/templates/_view-document-templates.qmd
+++ b/site/guide/templates/_view-document-templates.qmd
@@ -5,7 +5,7 @@ To review the existing templates available to your organization:
 
 2. Under Documents, select **Templates**.
 
-3. Click the tab for the document type with the templates you want to view. For example:
+3. Select one of the tabs for the document type with the templates you want to view.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)] For example:
 
    - **Documentation**
    - **Validation Report**
@@ -36,11 +36,7 @@ To review the existing templates available to your organization:
 
 1. Under Documents, select **Templates**.
 
-1. Click the tab for the document type with the templates you want to view. For example:
-
-   - **Documentation**
-   - **Validation Report**
-   - **Ongoing Monitoring**
+1. Select one of the tabs for [the document type with the templates you want to view](/guide/templates/working-with-model-documents.qmd).
 
 1. Select one of the available templates.
 
