--- a/site/guide/templates/customize-document-templates.qmd
+++ b/site/guide/templates/customize-document-templates.qmd
@@ -21,8 +21,8 @@ Customize {{< var vm.product >}}'s default templates for model documentation, va
 - [x] The template you want to edit must exist in the {{< var validmind.platform >}}.[^1]
 - [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2] 
 
-::: {.callout}
-If you are not sure which template or which version of a template your model documentation is using, check the **{{< fa book-open >}} Documentation** page of your model.[^3] The **Document Template** section in the right sidebar lists the information.
+::: {.callout title="Not sure which template or which version of a template your document is using?"}
+Check the [document template]{.smallcaps} section[^3] in the right sidebar.
 :::
 
 :::
@@ -43,7 +43,7 @@ To add guidelines to your template, edit the YAML template directly.
 
 2. Under Documents, select **Templates**.
 
-3. Select one of the tabs for the type of template you want to edit: 
+3. Select one of the tabs for the type of template you want to edit.[^4] For example:
 
    - **Documentation** 
    - **Validation Report**
@@ -51,7 +51,7 @@ To add guidelines to your template, edit the YAML template directly.
 
 4. Click the template to edit and on the template details page, select **{{< fa pencil >}} Edit Raw**. 
 
-5. In the Edit Template YAML editor that opens, make your changes according to the template schema,[^4] then click **Continue** to view a side-by-side comparison of your changes with the previous version of the template.
+5. In the Edit Template YAML editor that opens, make your changes according to the template schema,[^5] then click **Continue** to view a side-by-side comparison of your changes with the previous version of the template.
 
 6. On the Review Changes screen:
    - Add a description in **[version notes]{.smallcaps}** to track your changes.
@@ -184,7 +184,9 @@ Common issues with YAML include incorrect indenting, imbalanced quotes, or missi
 
 [^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^3]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+[^3]: [Manage document templates](manage-document-templates.qmd#swap-document-templates)
 
-[^4]: [Template schema](#template-schema)
+[^4]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+
+[^5]: [Template schema](#template-schema)
 
