--- a/site/guide/templates/_duplicate-template.qmd
+++ b/site/guide/templates/_duplicate-template.qmd
@@ -5,8 +5,7 @@ To duplicate an existing template and start with version one of that new templat
 
 2. Under Documents, select **Templates**.
 
-3. Select one of the tabs for the type of template you want to duplicate: 
-
+3. Select one of the tabs for the type of template you want to duplicate.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)] For example:
    - **Documentation** 
    - **Validation Report**
    - **Ongoing Monitoring**
@@ -29,11 +28,7 @@ To duplicate an existing template and start with version one of that new templat
 
 2. Under Documents, select **Templates**.
 
-3. Select one of the tabs for the type of template you want to duplicate: 
-
-   - **Documentation** 
-   - **Validation Report**
-   - **Ongoing Monitoring**
+3. Select one of the tabs for the [type of template you want to duplicate](/guide/templates/working-with-model-documents.qmd).
 
 4. Click on the template to duplicate and on the template details page, select **{{< fa copy >}} Duplicate Template**. 
 
