--- a/site/guide/templates/manage-text-block-library.qmd
+++ b/site/guide/templates/manage-text-block-library.qmd
@@ -25,7 +25,9 @@ To transform an existing text block into a reusable block:
 
 2. Select a model or find your model by applying a filter or searching for it.[^2]
 
-3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**, **{{< fa shield >}} Validation Report**, or **{{< fa desktop >}} Ongoing Monitoring** and select the relevant section containing the text block you want to make reusable.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a document type file.[^3]
+
+4. Select the relevant section containing the text block you want to make reusable.
 
 4. Hover your mouse over the text block you want to add to your block library, and click **{{< fa plus >}} Add to Library** to enter the details for your block:
 
@@ -36,7 +38,7 @@ To transform an existing text block into a reusable block:
 
 5. Click **Add Block** to save your text block.
 
-After you've added a reusable text block, you can then insert it into your model documentation, validation reports, or ongoing monitoring reports.[^3]
+After you've added a reusable text block, you can then insert it into your model documents.[^4]
 
 ## Duplicate text blocks
 
@@ -89,7 +91,9 @@ To remove an existing text block from your block library:
 
 [^2]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^3]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd#add-content-blocks)
+[^3]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+
+[^4]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd#add-content-blocks)
 
 
 
