--- a/site/guide/templates/working-with-model-documents.qmd
+++ b/site/guide/templates/working-with-model-documents.qmd
@@ -11,16 +11,6 @@ listing:
     contents:
       - manage-document-types.qmd
       - manage-model-documents.qmd
-  - id: documents-on-models
-    type: grid
-    grid-columns: 3
-    max-description-length: 250
-    sort: false
-    fields: [title, description]
-    contents:
-      - ../model-documentation/working-with-model-documentation.qmd
-      - ../model-validation/preparing-validation-reports.qmd
-      - ../monitoring/ongoing-monitoring.qmd
 ---
 
 Set up document types for use on models across your organization. By default, {{< var vm.product >}} provides document types and out-of-the-box templates for model documentation, validation reports, and ongoing monitoring reports.
@@ -28,7 +18,12 @@ Set up document types for use on models across your organization. By default, {{
 :::{#model-documents}
 :::
 
+<br>
+
+## What's next
+
 Learn more about how to work with model documentation, validation reports, and ongoing monitoring reports within the {{< var validmind.platform >}}:
 
-:::{#documents-on-models}
-:::
+- [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+- [Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd)
+- [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
