--- a/site/guide/model-documentation/assign-documentation-section-statuses.qmd
+++ b/site/guide/model-documentation/assign-documentation-section-statuses.qmd
@@ -23,7 +23,7 @@ Assign a completion status to individual sections of your model documentation th
 
 2. Select a model or find your model by applying a filter or searching for it.[^3]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Documentation file.[^4]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Documentation type file.[^4]
 
    Jump to any section of the model documentation by selecting the relevant section you would like to view.
 
