--- a/site/guide/model-documentation/check-documentation-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documentation-for-compliance.qmd
@@ -62,7 +62,7 @@ Supported regulations include:
 
 2. Select a model or find your model by applying a filter or searching for it.[^3]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a document type file.[^4].
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Document type file.[^4].
 
 4. Locate the Document Check box on the right and click **{{< fa check >}} Check Document**.
 
