--- a/site/guide/model-documentation/view-documentation-guidelines.qmd
+++ b/site/guide/model-documentation/view-documentation-guidelines.qmd
@@ -30,7 +30,7 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has these permiss
 
 2. Select a model or find your model by applying a filter or searching for it.[^5]
 
-3.  In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Documentation file.
+3.  In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Documentation type file.
 
 4. In any section of the documentation for a model, click **{{< var vm.product >}} Insights™** in the top right corner to expand the **{{< var vm.product >}} Insights™** sidebar.
 
