--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -109,7 +109,7 @@ Test-driven or metric over time blocks can be re-added later on but **text block
 
 2. Select a model or find your model by applying a filter or searching for it.[^11]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a document type file.[^12]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Document type file.[^12]
 
 4. Click on a section header to expand that section and remove content.
 
