--- a/site/guide/model-validation/add-manage-model-findings.qmd
+++ b/site/guide/model-validation/add-manage-model-findings.qmd
@@ -43,7 +43,7 @@ When linking findings to validation reports,[^5] you can add findings as you ass
 
 2. Select a model or find your model by applying a filter or searching for it.[^6]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report file.[^7]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file.[^7]
 
 4. In any section of the report where the button is available, click **{{< fa link >}} Link Finding to Report**.
 
