--- a/site/guide/model-validation/assess-compliance.qmd
+++ b/site/guide/model-validation/assess-compliance.qmd
@@ -40,7 +40,7 @@ To link validator evidence to a report, you must first log tests as a validator 
 
 2. Select a model or find your model by applying a filter or searching for it.[^5]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report file.[^6]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file.[^6]
 
    You can now expand any subsection of the validation report you would like to work with.
 
