--- a/site/guide/reporting/export-documentation.qmd
+++ b/site/guide/reporting/export-documentation.qmd
@@ -30,7 +30,7 @@ Export your model documentation, validation reports, and ongoing monitoring docu
 
 2. Select a model or find your model by applying a filter or searching for it.[^4]
 
-3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Document type file.^
 
 4. In right sidebar, click **{{< fa download >}} Export Document**.
 
@@ -44,7 +44,7 @@ Export your model documentation, validation reports, and ongoing monitoring docu
 
 2. Select a model or find your model by applying a filter or searching for it.[^6]
 
-3. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file.^
 
 4. In right sidebar, click **{{< fa download >}} Export Document**.
 
@@ -63,7 +63,7 @@ Export your model documentation, validation reports, and ongoing monitoring docu
 
 2. Select a model or find your model by applying a filter or searching for it.[^10]
 
-3. In the left sidebar that appears for your model, click **{{< fa desktop >}} Ongoing Monitoring**.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Monitoring type file.^
 
 4. In right sidebar, click **{{< fa download >}} Export Document**.
 
