--- a/site/guide/templates/manage-text-block-library.qmd
+++ b/site/guide/templates/manage-text-block-library.qmd
@@ -25,7 +25,7 @@ To transform an existing text block into a reusable block:
 
 2. Select a model or find your model by applying a filter or searching for it.[^2]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a document type file.[^3]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Document type file.[^3]
 
 4. Select the relevant section containing the text block you want to make reusable.
 
