--- a/site/guide/model-validation/_add-model-findings.qmd
+++ b/site/guide/model-validation/_add-model-findings.qmd
@@ -3,7 +3,7 @@
 
 1. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
 
-1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Documentation file.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
+1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Documentation type file.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
 
     Either log a finding on this overview page, or via a specific documentation section. Both methods will allow you to associate a finding with a documentation section. 
 
@@ -14,7 +14,7 @@
 
 1. Select a model or [find your model by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
 
-1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a [Documentation file](/guide/templates/working-with-model-documents.qmd).
+1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a [Documentation type file](/guide/templates/working-with-model-documents.qmd).
 
     Either log a finding on this overview page, or via a specific documentation section. Both methods will allow you to associate a finding with a documentation section. 
 
