--- a/site/guide/monitoring/review-monitoring-results.qmd
+++ b/site/guide/monitoring/review-monitoring-results.qmd
@@ -33,7 +33,7 @@ For results to be present and available for review, ongoing monitoring must be e
 
 2. Select a model or find your model by applying a filter or searching for it.[^3]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Monitoring file.[^4]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Monitoring type file.[^4]
    
     - Explore the different sections of the template and review the results.
     - Any deviations from the expected performance should be identified and acted on if necessary.
