Proofreading prereqs pt1

--- a/site/guide/model-documentation/assign-documentation-section-statuses.qmd
+++ b/site/guide/model-documentation/assign-documentation-section-statuses.qmd
@@ -12,7 +12,7 @@ Assign a completion status to individual sections of your model documentation th
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] The model is already registered in the model inventory.[^1]
+- [x] The model you are documenting is registered in the model inventory.[^1]
 - [x] You are a [{{< fa code >}} Developer]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2]
 
 :::
