--- a/site/guide/model-documentation/check-documentation-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documentation-for-compliance.qmd
@@ -51,7 +51,7 @@ Supported regulations include:
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] The model is already registered in the model inventory.[^1]
+- [x] The model you are documenting is registered in the model inventory.[^1]
 - [x] The model must have sufficiently complete documentation that can be checked against a regulatory standard.
 - [x] You are a [{{< fa code >}} Developer]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^2]
 :::
