--- a/site/guide/model-documentation/submit-for-approval.qmd
+++ b/site/guide/model-documentation/submit-for-approval.qmd
@@ -12,7 +12,7 @@ aliases:
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] The model you are documenting is registered in the model inventory.[^1]
+- [x] The model is registered in the model inventory.[^1]
 - [x] The approval workflow has been configured by an administrator.[^2]
 - [x] You are a [{{< fa code >}} Developer]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^3]
 
