--- a/site/guide/model-documentation/working-with-model-documentation.qmd
+++ b/site/guide/model-documentation/working-with-model-documentation.qmd
@@ -41,7 +41,7 @@ This section describes how to work with model documentation in the {{< var valid
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] The model is already registered in the model inventory.[^1]
+- [x] The model you are documenting is registered in the model inventory.[^1]
 - [x] You have provided some content for the documentation, either by uploading it through the {{< var validmind.developer >}}[^2] or via the {{< var validmind.platform >}}.
 - [x] You are a [{{< fa code >}} Developer]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^3] 
 
