--- a/site/guide/model-validation/add-manage-model-findings.qmd
+++ b/site/guide/model-validation/add-manage-model-findings.qmd
@@ -12,7 +12,7 @@ Add findings within the {{< var validmind.platform >}} at the model or documenta
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] The model is already registered in the model inventory.[^1]
+- [x] The model is registered in the model inventory.[^1]
 - [x] Model documentation is completed or in progress for your model.[^2]
 - [x] Finding statuses have been set up for use with findings.[^3]
 - [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^4]
