--- a/site/guide/model-validation/assess-compliance.qmd
+++ b/site/guide/model-validation/assess-compliance.qmd
@@ -18,8 +18,8 @@ Compliance assessments provide an unbiased starting point that enables more effi
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] The model you are documenting is registered in the model inventory.[^1]
-- [x] A model developer has marked their model documentation as **Ready for Validation**.[^2]
+- [x] The model you are validating is registered in the model inventory.[^1]
+- [x] A model developer has submitted their model documentation for validation.[^2]
 - [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^3] 
 
 :::
