--- a/site/guide/model-validation/view-filter-model-findings.qmd
+++ b/site/guide/model-validation/view-filter-model-findings.qmd
@@ -10,8 +10,8 @@ Access a complete list of filterable findings logged across all your models in t
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] The model is already registered in the model inventory.[^1]
-- [x] Model documentation is completed or in progress for your model.[^2]
+- [x] The model is registered in the model inventory.[^1]
+- [x] There are findings logged on any model.[^2]
 - [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^3]
 
 :::
@@ -150,7 +150,7 @@ Deletion of saved views is permanent.
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+[^2]: [Add and manage model findings](add-manage-model-findings.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
