--- a/site/guide/templates/manage-document-templates.qmd
+++ b/site/guide/templates/manage-document-templates.qmd
@@ -20,7 +20,8 @@ View and swap between different versions of your document templates within the {
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] You are a [{{< fa code >}} Developer]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^1]
+- [x] To swap between templates or template versions, more than one template or version must exist for that document type.[^1]
+- [x] You are a [{{< fa code >}} Developer]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^2]
 
 :::
 
@@ -34,7 +35,7 @@ View templates applied to model documents or swap between templates or template 
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^2]
+2. Select a model or find your model by applying a filter or searching for it.[^3]
 
 3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents**.
 
@@ -74,8 +75,10 @@ d. Click **Apply Changes to Template** to complete the swap.
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^1]: [Manage document types](manage-document-types.qmd)
 
-[^2]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
 
