--- a/site/developer/model-documentation/store-credentials-in-env-file.qmd
+++ b/site/developer/model-documentation/store-credentials-in-env-file.qmd
@@ -20,7 +20,7 @@ Keeing model credentials in a separate file also allows for precise access contr
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] The model is already registered in the model inventory.[^1]
+- [x] The model is registered in the model inventory.[^1]
 - [x] You are a [{{< fa code >}} Developer]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2]
 
 :::
