--- a/site/guide/model-documentation/collaborate-with-others.qmd
+++ b/site/guide/model-documentation/collaborate-with-others.qmd
@@ -21,8 +21,8 @@ Use the real-time collaboration features to track changes, add comments, and acc
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] The model you are documenting is registered in the model inventory.[^1]
-- [x] Model documentation has submitted for review or validation by the model validation team.[^2]
+- [x] There are models registered in the model inventory.[^1]
+- [x] Documents exist and are completed or are in progress for your model.[^2]
 - [x] You are a [{{< fa code >}} Developer]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^3] 
 
 :::
@@ -147,7 +147,7 @@ To delete a comment in a resolved thread, follow the same steps but click the **
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Working with model documentation](working-with-model-documentation.qmd)
+[^2]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
