--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -46,8 +46,9 @@ Use {{< var vm.product >}} to assist you with generating content via AI!^[[Gener
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] The model you are documenting or validating is registered in the model inventory.[^3]
-- [x] You are a [{{< fa code >}} Developer]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^4]
+- [x] There are models registered in the model inventory.[^3]
+- [x] Documents exist and are completed or are in progress for your model.[^4]
+- [x] You are a [{{< fa code >}} Developer]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^5]
 
 :::
 
@@ -60,11 +61,11 @@ Use {{< var vm.product >}} to assist you with generating content via AI!^[[Gener
    a. [new]{.smallcaps}:
       - **Text Block** — Adds a new section with a blank content block.
    b. [from library]{.smallcaps}:
-      - **Text Block** — Inserts a text block from a template in your block library.[^5] Select the reusable blocks you want to add, then click **Insert # Text Block(s) to Document**.
-      - **Test-Driven**[^6] — Adds a new section with logged test results.
-      - **Metric Over Time**[^7] — Adds a new section with logged metric over time results.
+      - **Text Block** — Inserts a text block from a template in your block library.[^6] Select the reusable blocks you want to add, then click **Insert # Text Block(s) to Document**.
+      - **Test-Driven**[^7] — Adds a new section with logged test results.
+      - **Metric Over Time**[^8] — Adds a new section with logged metric over time results.
 
-7. After adding the block to your document, click on the text to make changes or add comments.[^8]
+7. After adding the block to your document, click on the text to make changes or add comments.[^9]
 
 ### Add mathematical formulas
 
@@ -89,7 +90,7 @@ While editing a simple text block, you can insert math equations using the formu
 ### Generate Text with AI <sup>[beta]{.smallcaps}</sup>
 
 ::: {.callout title="Have you logged your tests?"}
-Generating content drafts for your model documentation works best after you've logged tests and test descriptions for your model's tests with the {{< var validmind.developer >}},[^9] as existing test descriptions provide more context for the large language model (LLM) to draw upon.
+Generating content drafts for your model documentation works best after you've logged tests and test descriptions for your model's tests with the {{< var validmind.developer >}},[^10] as existing test descriptions provide more context for the large language model (LLM) to draw upon.
 
 :::
 
@@ -97,7 +98,7 @@ While editing a simple text block, you can have {{< var vm.product >}} assist yo
 
 {{< include content_blocks/_generate-with-ai.qmd >}}
 
-When generating content drafts with AI, accepted versions and edits are retained in your {{< fa wifi >}} Model Activity[^10] just like other updates to your documentation, reports, or plans.
+When generating content drafts with AI, accepted versions and edits are retained in your {{< fa wifi >}} Model Activity[^11] just like other updates to your documentation, reports, or plans.
 
 ## Remove content blocks
 
@@ -107,9 +108,9 @@ Test-driven or metric over time blocks can be re-added later on but **text block
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^11]
+2. Select a model or find your model by applying a filter or searching for it.[^12]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Document type file.[^12]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Document type file.[^13]
 
 4. Click on a section header to expand that section and remove content.
 
@@ -135,20 +136,22 @@ Test-driven or metric over time blocks can be re-added later on but **text block
 
 [^3]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^4]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
-[^5]: [Manage text block library](/guide/templates/manage-text-block-library.qmd)
+[^5]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^6]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
+[^6]: [Manage text block library](/guide/templates/manage-text-block-library.qmd)
 
-[^7]: [Work with metrics over time](/guide/monitoring/work-with-metrics-over-time.qmd)
+[^7]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
 
-[^8]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
+[^8]: [Work with metrics over time](/guide/monitoring/work-with-metrics-over-time.qmd)
 
-[^9]: [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
+[^9]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
 
-[^10]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
+[^10]: [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
 
-[^11]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^11]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
 
-[^12]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^12]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^13]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
