--- a/site/guide/model-inventory/edit-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/edit-model-inventory-fields.qmd
@@ -12,7 +12,7 @@ Edit individual detail fields on a model to ensure that model details are accura
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] The model is already registered in the model inventory.[^1]
+- [x] The model is registered in the model inventory.[^1]
 - [x] You are the model owner[^2] for the model you would like edit the details of, a [{{< fa hand >}} Customer Admin]{.bubble}, or assigned another role or stakeholder type with sufficient permissions to perform the tasks in this guide.[^3]
 
 :::
