--- a/site/guide/model-validation/preparing-validation-reports.qmd
+++ b/site/guide/model-validation/preparing-validation-reports.qmd
@@ -31,8 +31,8 @@ Use the {{< var validmind.platform >}} to prepare detailed validation reports in
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] The model you are documenting is registered in the model inventory.[^1]
-- [x] A model developer has marked their model documentation as **Ready for Validation**.[^2]
+- [x] The model you are validating is registered in the model inventory.[^1]
+- [x] A model developer has submitted their model documentation for validation.[^2]
 - [x] Validation guidelines are aligned with your organization's requirements and added to the correct validation templates.[^3]
 - [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^4] 
 
