--- a/site/guide/reporting/export-documentation.qmd
+++ b/site/guide/reporting/export-documentation.qmd
@@ -18,7 +18,7 @@ Export your model documentation, validation reports, and ongoing monitoring docu
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] The model is already registered in the model inventory.[^1]
+- [x] The model is registered in the model inventory.[^1]
 - [x] Model documentation is completed or in progress.[^2]
 - [x] You are a [{{< fa code >}} Developer]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^3]
 
