Proofreading prereqs pt2

--- a/site/guide/model-validation/view-filter-model-findings.qmd
+++ b/site/guide/model-validation/view-filter-model-findings.qmd
@@ -10,7 +10,7 @@ Access a complete list of filterable findings logged across all your models in t
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] The model is registered in the model inventory.[^1]
+- [x] There are models registered in the model inventory.[^1]
 - [x] There are findings logged on any model.[^2]
 - [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^3]
 
