--- a/site/guide/monitoring/review-monitoring-results.qmd
+++ b/site/guide/monitoring/review-monitoring-results.qmd
@@ -18,22 +18,24 @@ To ensure your model continues to perform as expected, it's important to regular
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] You are a [{{< fa code >}} Developer]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^1]
+- [x] The model is registered in the model inventory.[^1]
+- [x] Monitoring has been enabled for your model.[^2]
+- [x] You are a [{{< fa code >}} Developer]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^3]
 - [x] The model is in the pre-approval stage for performance testing or the model has been approved and is in production.
 
 :::
 
-## Steps 
+## Steps
 
 ::: {.callout}
-For results to be present and available for review, ongoing monitoring must be enabled.[^2]
+For results to be present and available for review, ongoing monitoring must be enabled.[^4]
 :::
 
 1. In the {{< var validmind.platform >}}, click **{{< fa cubes >}} Inventory** in the left sidebar.
 
-2. Select a model or find your model by applying a filter or searching for it.[^3]
+2. Select a model or find your model by applying a filter or searching for it.[^5]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Monitoring type file.[^4]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Monitoring type file.[^6]
    
     - Explore the different sections of the template and review the results.
     - Any deviations from the expected performance should be identified and acted on if necessary.
@@ -102,11 +104,15 @@ The final assessment is that the model requires attention:
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
 [^2]: [Enable monitoring](enable-monitoring.qmd)
 
-[^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^4]: [Enable monitoring](enable-monitoring.qmd)
+
+[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^6]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
