--- a/site/guide/reporting/export-documentation.qmd
+++ b/site/guide/reporting/export-documentation.qmd
@@ -18,8 +18,8 @@ Export your model documentation, validation reports, and ongoing monitoring docu
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] The model is registered in the model inventory.[^1]
-- [x] Model documentation is completed or in progress.[^2]
+- [x] There are models registered in the model inventory.[^1]
+- [x] Documents exist and are completed or are in progress for your model.[^2]
 - [x] You are a [{{< fa code >}} Developer]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^3]
 
 :::
@@ -82,7 +82,7 @@ Export your model documentation, validation reports, and ongoing monitoring docu
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+[^2]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
