--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -10,7 +10,7 @@ Add or delete the document types on individual models in your inventory.
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] There are models registered in the model inventory.[^1]
+- [x] The model is registered in the model inventory.[^1]
 - [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2] 
 
 :::
