--- a/site/guide/reporting/view-report-data.qmd
+++ b/site/guide/reporting/view-report-data.qmd
@@ -11,6 +11,7 @@ Review detailed data on your models or model findings within the {{< var validmi
 
 - [x] {{< var link.login >}}
 - [x] There are models registered in the model inventory.[^1]
+- [x] There are findings logged on any model.[^2]
 
 :::
 
@@ -18,6 +19,9 @@ Review detailed data on your models or model findings within the {{< var validmi
 
 {{< include /guide/reporting/_view-report-data.qmd >}}
 
+
 <!-- FOOTNOTES -->
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
+
+[^2]: [Add and manage model findings](/guide/model-validation/add-manage-model-findings.qmd)
