--- a/site/guide/reporting/working-with-analytics.qmd
+++ b/site/guide/reporting/working-with-analytics.qmd
@@ -34,6 +34,7 @@ Reports are primarily designed for model validators or Chief Risk Officers (CROs
 
 - [x] {{< var link.login >}}
 - [x] There are models registered in the model inventory.[^1]
+- [x] There are findings logged on any model.[^2]
 
 :::
 
@@ -71,7 +72,7 @@ Total Models
 : Count of your total models registered with {{< var vm.product >}}.
 
 Number of Models by Business Unit and Tier
-: Count of your model volume by business unit[^2] further broken down by risk tier. Assists you in pinpointing where in the organization resources should be concentrated on, along with the materiality of risk that unit may pose based on the models they are responsible for. 
+: Count of your model volume by business unit[^3] further broken down by risk tier. Assists you in pinpointing where in the organization resources should be concentrated on, along with the materiality of risk that unit may pose based on the models they are responsible for. 
 
 Number of Models by Status and Business Unit
 : Count of your model volume by status further broken down by business unit. Assists you in pinpointing where in the organization resources may need to be focused, based on the progress and severity of findings. 
@@ -101,11 +102,11 @@ Findings by Model
 ## Arrange report widgets
 
 :::{.callout-important title="Changes are automatically saved and will affect all other users in your organization."}
-You can also add any of the report widgets to your personal dashboard.[^3]
+You can also add any of the report widgets to your personal dashboard.[^4]
 
 :::
 
-Rearrange report widgets on your custom analytics pages:[^4]
+Rearrange report widgets on your custom analytics pages:[^5]
 
 1. In the left sidebar, click **{{< fa square-poll-vertical >}} Analytics**.
 
@@ -130,8 +131,10 @@ Rearrange report widgets on your custom analytics pages:[^4]
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Manage business units](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
+[^2]: [Add and manage model findings](/guide/model-validation/add-manage-model-findings.qmd)
 
-[^3]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd#manage-widgets)
+[^3]: [Manage business units](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
 
-[^4]: [Manage custom reports](manage-custom-reports.qmd#add-custom-analytics)
+[^4]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd#manage-widgets)
+
+[^5]: [Manage custom reports](manage-custom-reports.qmd#add-custom-analytics)
