Proofreading prereqs pt3

--- a/site/guide/configuration/manage-permissions.qmd
+++ b/site/guide/configuration/manage-permissions.qmd
@@ -13,7 +13,8 @@ Permissions dictate user access controls within the {{< var validmind.platform >
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^1] 
+- [x] Roles must exist in order to be assigned permissions.[^1]
+- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2] 
 
 :::
 
@@ -210,4 +211,6 @@ The following tables outline the default roles and stock permissions provided by
 
 <!-- FOOTNOTES -->
 
-[^1]: [Default permissions](#default-permissions)
+[^1]: [Manage roles](manage-roles.qmd)
+
+[^2]: [Default permissions](#default-permissions)
