Add basic user role info

--- a/site/guide/configuration/log-in-to-validmind.qmd
+++ b/site/guide/configuration/log-in-to-validmind.qmd
@@ -53,9 +53,21 @@ Log in to our cloud-hosted {{< var validmind.platform >}} to work with your mode
 
     After successful login, you will be redirected to the main dashboard of the {{< var validmind.platform >}}.
 
+## Basic ValidMind access
+
+If you are a new user signing in for the first time, you might have only _a basic ValidMind user role_. This role allows you to authenticate but provides limited access to your organization, models, and platform features.
+
+If you are unable to access platform features after logging in, ask an administrator to:
+
+- Assign you to one or more groups[^1]
+- Grant you the appropriate roles[^2]
+
+After groups and roles have been assigned, you will gain access to available models and workflows. You will also be able to perform actions based on your permissions, such as working on model documentation, running tests, or completing validations.
+
 ## {{< var validmind.vpv >}}
 
 To configure and log in through a private link for your company VPC using a supported service:
+
 
 :::{#private-networks}
 :::
@@ -66,4 +78,8 @@ To configure and log in through a private link for your company VPC using a supp
 - [Managing users](managing-users.qmd)
 - [Personalize {{< var vm.product >}}](personalize-validmind.qmd)
 
+<!-- FOOTNOTES -->
+
+[^1]: [Manage groups](/guide/configuration/manage-groups.qmd)
+[^2]: [Manage roles](/guide/configuration/manage-roles.qmd)
 
