Save point, got something working

--- a/site/reference/vm-api.qmd
+++ b/site/reference/vm-api.qmd
@@ -1,12 +1,12 @@
 ---
-title: "ValidMind public API reference"
+title: "VM API reference"
 date: last-modified
 ---
 
 ::: {.column-screen}
 <script type="module" src="https://unpkg.com/rapidoc/dist/rapidoc-min.js"></script>
 <rapi-doc 
-    spec-url="vm-api-swagger.json"
+    spec-url="https://api.dev.vm.validmind.ai/vm/api/v1/swagger.json"
     theme="light"
     load-fonts="true"
     regular-font="Inter" 
