Draft for Manage document types

--- a/site/guide/templates/manage-document-types.qmd
+++ b/site/guide/templates/manage-document-types.qmd
@@ -5,6 +5,10 @@ date: last-modified
 
 Customize the document types available to your organization. Document types have their own configurable and reusable templates.
 
+::: {.callout title="Model documentation, validation report, and ongoing monitoring report document types are provided by default."} 
+These stock document types cannot be deleted, only edited.
+:::
+
 ::: {.attn}
 
 ## Prerequisites
@@ -31,8 +35,42 @@ Customize the document types available to your organization. Document types have
 
 5. Click **Create Document Type** to add your document type.
 
+6. Once created, edit the available templates for your document type.**
+
 ## Edit or delete document types
 
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Documents, select **Document Types**.
+
+3. Edit or delete document types as desired.
+
+::: {.panel-tabset}
+
+#### Edit document types
+
+a. Hover over the document type you want to edit.
+
+b. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select **{{< fa pencil >}} Edit** to change your document type's details.
+
+c. Click **Update Document Type** to apply your changes.
+
+#### Delete document types
+
+a. Hover over the document type you want to delete.
+
+b. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select [**{{< fa trash-can >}} Delete**]{.red} to remove the document type.
+
+c. After you confirm, the document type will be deleted.
+
+::: {.callout-important}
+## Model documentation, validation report, and ongoing monitoring report document types are stock types and cannot be deleted.
+
+In order to delete a document type, there must be no models using that document type.
+
+:::
+
+:::
 
 <!-- FOOTNOTES -->
 
