Editing Manage model documents

--- a/site/guide/templates/manage-document-types.qmd
+++ b/site/guide/templates/manage-document-types.qmd
@@ -28,14 +28,14 @@ These stock document types cannot be deleted, only edited.
 
 4. Enter in the document type details: 
 
-    - Provide a **[name]{.smallcaps}** and **[description]{.smallcaps}**.
+    - Provide a **[name]{.smallcaps}** and an optional **[description]{.smallcaps}**.
     - Indicate the display **[order]{.smallcaps}** of this document type in lists and menus.
     - Toggle whether this document type should **[auto initialize when model is created]{.smallcaps}**.
     - Select the model stakeholder types[^2] that should have **[write permissions]{.smallcaps}** for this document type.
 
 5. Click **Create Document Type** to add your document type.
 
-6. Once created, edit the available templates for your document type.**
+6. Once created, customize the available templates for your document type.[^3]
 
 ## Edit or delete document types
 
@@ -77,6 +77,8 @@ In order to delete a document type, there must be no models using that document 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
 [^2]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+
+[^3]: [Customize document templates](customize-document-templates.qmd)
 
 
 
