--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -3,7 +3,7 @@ title: "Manage model documents"
 date: last-modified
 ---
 
-Add or delete the document types on individual models in your inventory.
+Add or delete documents available on individual models in your inventory.
 
 ::: {.attn}
 
@@ -11,14 +11,48 @@ Add or delete the document types on individual models in your inventory.
 
 - [x] {{< var link.login >}}
 - [x] The model is registered in the model inventory.[^1]
+
+EDIT THIS
+
 - [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2] 
 
 :::
 
 ## Add model documents
 
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+2. Select a model or find your model by applying a filter or searching for it.^
+
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents**.
+
+4. Click **{{< fa plus >}} Create Document**.
+
+5. Enter in the document details: 
+
+    - **[document title]{.smallcaps}** — Title of your document. A unique document ID will automatically be created from the name.
+    - **[document type]{.smallcaps}**^ — The type of your document.
+    - **[document source]{.smallcaps}** — Upload a PDF file or select from an existing document template.^
+
+6. Click **Create Document** to add the document to your model.
 
 ## Delete documents
+
+::: {.callout-important}
+Deletion of documents on models is permanent and cannot be undone.
+:::
+
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+2. Select a model or find your model by applying a filter or searching for it.^
+
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents**.
+
+4. Hover over the document you want to delete.
+
+5. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select [**{{< fa trash-can >}} Delete**]{.red} to remove the document.
+
+6. After you confirm, the document type will be deleted from the model.
 
 
 <!-- FOOTNOTES -->
