Draft for Manage model documents

--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -11,10 +11,8 @@ Add or delete documents available on individual models in your inventory.
 
 - [x] {{< var link.login >}}
 - [x] The model is registered in the model inventory.[^1]
-
-EDIT THIS
-
-- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2] 
+- [x] Document types[^2] and document templates[^3] have been set up for use.
+- [x] You are assigned a role with sufficient permissions to create or modify documents on models.[^4] 
 
 :::
 
@@ -22,7 +20,7 @@ EDIT THIS
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.^
+2. Select a model or find your model by applying a filter or searching for it.[^5]
 
 3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents**.
 
@@ -30,9 +28,9 @@ EDIT THIS
 
 5. Enter in the document details: 
 
-    - **[document title]{.smallcaps}** — Title of your document. A unique document ID will automatically be created from the name.
-    - **[document type]{.smallcaps}**^ — The type of your document.
-    - **[document source]{.smallcaps}** — Upload a PDF file or select from an existing document template.^
+    - **[document title]{.smallcaps}** — Title of your document.[^6]
+    - **[document type]{.smallcaps}**[^7] — The type of your document.
+    - **[document source]{.smallcaps}** — Upload a PDF file or select from an existing document template.[^8]
 
 6. Click **Create Document** to add the document to your model.
 
@@ -44,7 +42,7 @@ Deletion of documents on models is permanent and cannot be undone.
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.^
+2. Select a model or find your model by applying a filter or searching for it.[^9]
 
 3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents**.
 
@@ -59,8 +57,21 @@ Deletion of documents on models is permanent and cannot be undone.
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^2]: [Manage document types](manage-document-types.qmd)
 
+[^3]: [Customize document templates](customize-document-templates.qmd)
+
+[^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^6]: A unique document ID will automatically be created from the title.
+
+[^7]: [Manage document types](manage-document-types.qmd)
+
+[^8]: [Customize document templates](customize-document-templates.qmd)
+
+[^9]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
 
 
