--- a/site/guide/templates/manage-document-types.qmd
+++ b/site/guide/templates/manage-document-types.qmd
@@ -35,7 +35,10 @@ These stock document types cannot be deleted, only edited.
 
 5. Click **Create Document Type** to add your document type.
 
-6. Once created, customize the available templates for your document type.[^3]
+::: {.callout}
+Once created, customize the available templates for your document type.[^3]
+
+:::
 
 ## Edit or delete document types
 
